# test

./: .gitignore  HANDOFF.md  README.md  VERSION.md  docker-compose.yml  init.sh  progress.md  status.md
.claude/: system_test.json
.claude/plans/: free-deployment-plan.md
.claude/state/: context.md  current-run  environment-report.md  feature_summary.json  feature_summary.tsv  pipeline_status.json  pipeline_status.tsv
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/api/: config.py
backend/api/models/: analysis.py  body_specs.py  report.py  share_link.py  stamp.py  subject.py  upload.py  user.py
backend/api/routers/: auth.py  body_specs.py  dashboard.py  processing.py  reports.py  sharing.py  subject.py  upload.py
backend/api/schemas/: analysis.py  auth.py  body_specs.py  dashboard.py  report.py  stamp.py  subject.py  upload.py
backend/api/services/: body_specs_service.py  dashboard_service.py  database.py  gpt_analyzer.py  llm_analysis_service.py  processing_service.py  report_service.py  sharing_service.py  stamp_detection_service.py  stamp_generation_service.py  state_store.py  subject_service.py  token_service.py  upload_service.py  user_service.py  video_processor.py
backend/tests/: conftest.py  test_auth.py  test_body_specs.py  test_dashboard.py  test_llm_analysis.py  test_processing.py  test_reports.py  test_sharing.py  test_stamp_generation.py  test_subject.py  test_upload.py
docs/: DOC_CONTRACT.md
frontend/: Dockerfile  jest.config.js  jest.setup.js  package-lock.json  package.json  tsconfig.tsbuildinfo
(+694 files in other folders)
